[gd_scene load_steps=9 format=3 uid="uid://bhrl2dev3d7qx"]

[ext_resource type="PackedScene" uid="uid://bmdkm4h28wpvs" path="res://scenes/menu_controls/gold_label.tscn" id="1_6csyn"]
[ext_resource type="PackedScene" uid="uid://62tmbrhtsicl" path="res://scenes/menu_controls/store_item.tscn" id="1_cd4un"]
[ext_resource type="Script" path="res://scripts/upgrades_menu.gd" id="1_vv16r"]
[ext_resource type="FontFile" uid="uid://bmnypigf4h1l8" path="res://font/dogica/OTF/dogica.otf" id="1_xxyoq"]
[ext_resource type="PackedScene" uid="uid://bvy6sii7baucy" path="res://scenes/menu_controls/store_descriptions.tscn" id="4_ccl0x"]

[sub_resource type="Theme" id="Theme_ng0b6"]
default_font = ExtResource("1_xxyoq")
default_font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_ecnah"]
font = ExtResource("1_xxyoq")

[sub_resource type="Theme" id="Theme_l8ssr"]
default_font = ExtResource("1_xxyoq")

[node name="UpgradesMenu" type="Control" groups=["UpgradesMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vv16r")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 60.0
offset_right = 1190.0
offset_bottom = 660.0
color = Color(0, 0, 0, 0.670588)

[node name="OKContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_top = 561.0
offset_right = 46.0
offset_bottom = 578.0
scale = Vector2(2.80891, 2.44851)
theme = SubResource("Theme_ng0b6")

[node name="OK" type="Button" parent="Background/OKContainer"]
layout_mode = 2
text = "OK
"

[node name="TitleContainer" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 25.0
offset_right = 456.0
offset_bottom = 48.0
text = "Upgrades"
label_settings = SubResource("LabelSettings_ecnah")

[node name="Details" parent="." instance=ExtResource("4_ccl0x")]
position = Vector2(854, 137)

[node name="BuyContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1111.0
offset_top = 605.0
offset_right = 1167.0
offset_bottom = 627.0
theme = SubResource("Theme_l8ssr")

[node name="Buy" type="Button" parent="BuyContainer"]
layout_mode = 2
text = "BUY
"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 92.0
offset_right = 1051.0
offset_bottom = 132.0

[node name="GoldLabel" parent="BoxContainer" instance=ExtResource("1_6csyn")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 133.0
offset_right = 374.0
offset_bottom = 588.0

[node name="ItemsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="StoreItem" parent="ScrollContainer/ItemsContainer" instance=ExtResource("1_cd4un")]
layout_mode = 2
item_id = "ability_point"

[connection signal="pressed" from="Background/OKContainer/OK" to="." method="_on_ok_pressed"]
[connection signal="focus_entered" from="BuyContainer/Buy" to="." method="_on_buy_focus_entered"]
